--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-one-page-wonder.git"
     },
     "dependencies": {
-        "bootstrap": "4.1.1",
+        "bootstrap": "^4.2.1",
         "jquery": "3.3.1"
     },
     "devDependencies": {
@@ -35,6 +35,6 @@
         "gulp-clean-css": "3.9.4",
         "gulp-header": "2.0.5",
         "gulp-rename": "^1.2.2",
-        "gulp-sass": "4.0.1"
+        "gulp-sass": "^4.0.2"
     }
 }
