--- a/package.json
+++ b/package.json
@@ -26,12 +26,14 @@
         "url": "https://github.com/BlackrockDigital/startbootstrap-one-page-wonder.git"
     },
     "dependencies": {
-        "bootstrap": "^4.2.1",
-        "jquery": "3.3.1"
+        "bootstrap": "^4.3.1",
+        "extend": "^3.0.2",
+        "jquery": "3.3.1",
+        "popper.js": "^1.14.7"
     },
     "devDependencies": {
         "browser-sync": "^2.26.3",
-        "gulp": "^3.9.1",
+        "gulp": "^4.0.0",
         "gulp-clean-css": "3.9.4",
         "gulp-header": "2.0.5",
         "gulp-rename": "^1.2.2",
